feat(gi): add accepted semantic field